拆分sidebar对应页面

--- a/admin/views/components/sidemenu/index.html
+++ b/admin/views/components/sidemenu/index.html
@@ -1,6 +1,6 @@
 <ul class="nav flex-column" style="margin-top: 10px">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#" id="sidemenu-home">首页</a>
+    <a class="nav-link active" aria-current="page" href="/admin/views/home/index.html" id="sidemenu-home">首页</a>
   </li>
   <li class="nav-item">
     <div class="accordion">
@@ -13,8 +13,10 @@
         </h2>
         <div id="userManage" class="accordion-collapse collapse show" aria-labelledby="headingOne">
           <div class="accordion-body">
-            <a class="nav-link active" aria-current="page" href="#" id="sidemenu-addUser">添加用户</a>
-            <a class="nav-link active" aria-current="page" href="#" id="sidemenu-userList">用户列表</a>
+            <a class="nav-link active" aria-current="page" href="/admin/views/user-manage/addUsers/index.html"
+              id="sidemenu-addUsers">添加用户</a>
+            <a class="nav-link active" aria-current="page" href="/admin/views/user-manage/userList/index.html"
+              id="sidemenu-userList">用户列表</a>
           </div>
         </div>
       </div>
@@ -32,15 +34,15 @@
         </h2>
         <div id="newsManage" class="accordion-collapse collapse show" aria-labelledby="headingOne">
           <div class="accordion-body">
-            <a class="nav-link active" aria-current="page" href="#" id="sidemenu-addNews">创建新闻</a>
-            <a class="nav-link active" aria-current="page" href="#" id="sidemenu-newsList">新闻列表</a>
+            <a class="nav-link active" aria-current="page" href="/admin/views/news-manage/addNews/index.html"
+              id="sidemenu-addNews">创建新闻</a>
+            <a class="nav-link active" aria-current="page" href="/admin/views/news-manage/newsList/index.html"
+              id="sidemenu-newsList">新闻列表</a>
           </div>
         </div>
       </div>
-
     </div>
   </li>
-
 </ul>
 
 
