--- a/admin/views/home/index.scss
+++ b/admin/views/home/index.scss
@@ -1,25 +1,1 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-html,body,.main{
-  height: 100%;
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  .topbar{
-    height: 50px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-  }
-
-  .box {
-    flex:1;
-    padding-top: 50px;
-    // background-color: blue;
-  }
-}
+@import '../style.sass';
