--- a/admin/views/home/index.html
+++ b/admin/views/home/index.html
@@ -22,8 +22,19 @@
           <div class="col-2 sidemenu">
             <!-- DONE 侧边栏 -->
           </div>
-          <div class="col-10">
-            Column
+          <div class="col-10 content">
+            <div class="maincontent">
+              <!-- 面包屑 -->
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">首页</li>
+                </ol>
+              </nav>
+              <!-- 个人信息 -->
+              <div class="userprofile">
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
