--- a/admin/views/style.css
+++ b/admin/views/style.css
@@ -1,4 +1,6 @@
-html, body, .main {
+html,
+body,
+.main {
   height: 100%;
 }
 
@@ -16,4 +18,7 @@ html, body, .main {
 .main .box {
   flex: 1;
   padding-top: 50px;
+}
+.main .box .content {
+  padding: 20px;
 }
