添加用户表单,上传头像base64编码

--- a/admin/views/login/index.html
+++ b/admin/views/login/index.html
@@ -20,7 +20,7 @@
     <form id="loginform">
       <div class="mb-3">
         <label for="username" class="form-label">用户名</label>
-        <input type="text" class="form-control" id="username" required aria-describedby="emailHelp">
+        <input type="text" class="form-control" id="username">
       </div>
 
       <div class="mb-3">
