--- a/admin/views/news-manage/addNews/index.html
+++ b/admin/views/news-manage/addNews/index.html
@@ -20,14 +20,14 @@
         <div class="row">
           <div class="col-2 sidemenu">
           </div>
-          <div class="col-10">
-            Column
+          <div class="col-10 content">
+            <div class="maincontent">
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 
 </html>
