--- a/admin/views/news-manage/addNews/index.css
+++ b/admin/views/news-manage/addNews/index.css
@@ -19,3 +19,10 @@ body,
   flex: 1;
   padding-top: 50px;
 }
+.main .box .content {
+  padding: 20px;
+}
+.main .box .content .maincontent {
+  padding: 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
