--- a/admin/views/style.scss
+++ b/admin/views/style.scss
@@ -23,6 +23,10 @@ body,
     padding-top: 50px;
     .content{
       padding: 20px;
+      .maincontent{
+        padding: 20px;
+        box-shadow: 0 0 5px rgba($color:#000000,$alpha:0.2);
+      } 
     }
   }
 }
