用户信息上传数据库

--- a/admin/views/user-manage/addUsers/index.html
+++ b/admin/views/user-manage/addUsers/index.html
@@ -48,11 +48,9 @@
                 </div>
                 <div class="mb-3">
                   <label for="avatar" class="form-label">头像</label>
-                  <input type="file" class="form-control" id="avatar">
+                  <input type="file" class="form-control" id="avatar" required>
                 </div>
                 <button type="submit" class="btn btn-primary">添加用户</button>
-
-
               </form>
             </div>
           </div>
