--- a/admin/views/components/sidemenu/index.html
+++ b/admin/views/components/sidemenu/index.html
@@ -2,7 +2,7 @@
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="/admin/views/home/index.html" id="sidemenu-home">首页</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item user-manage-item">
     <div class="accordion">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
