--- a/admin/views/user-manage/userList/index.html
+++ b/admin/views/user-manage/userList/index.html
@@ -20,8 +20,33 @@
         <div class="row">
           <div class="col-2 sidemenu">
           </div>
-          <div class="col-10">
-            Column
+          <div class="col-10 content">
+            <div class="maincontent">
+              <!-- 面包屑 -->
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item " aria-current="page">用户管理</li>
+                  </li>
+                  <li class="breadcrumb-item active" aria-current="page">用户列表</li>
+                </ol>
+              </nav>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">用户名</th>
+                    <th scope="col">头像</th>
+                    <th scope="col">操作</th>
+                  </tr>
+                </thead>
+                <tbody id="listBody">
+                  <!-- <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                  </tr> -->
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
