--- a/admin/views/user-manage/userList/index.html
+++ b/admin/views/user-manage/userList/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-          <button type="button" class="btn btn-primary">保存</button>
+          <button type="button" class="btn btn-primary" id="editConfirm">保存</button>
         </div>
       </div>
     </div>
