--- a/admin/views/user-manage/userList/index.html
+++ b/admin/views/user-manage/userList/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Modal - 编辑用户 -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -84,6 +84,24 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
           <button type="button" class="btn btn-primary" id="editConfirm">保存</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal - 删除用户 -->
+  <div class="modal fade" id="delModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">删除用户</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="delModalMsg">
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary" id="delConfirm">确定</button>
         </div>
       </div>
     </div>
