--- a/admin/views/news-manage/newsList/index.html
+++ b/admin/views/news-manage/newsList/index.html
@@ -22,6 +22,30 @@
           </div>
           <div class="col-10 content">
             <div class="maincontent">
+              <!-- 面包屑 -->
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item " aria-current="page">新闻管理</li>
+                  <li class="breadcrumb-item active" aria-current="page">新闻列表</li>
+                </ol>
+              </nav>
+              <!-- 新闻列表 -->
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">标题</th>
+                    <th scope="col">分类</th>
+                    <th scope="col">操作</th>
+                  </tr>
+                </thead>
+                <tbody id="listBody">
+                  <!-- <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                  </tr> -->
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
