--- a/admin/views/news-manage/newsList/index.html
+++ b/admin/views/news-manage/newsList/index.html
@@ -51,6 +51,22 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal--预览新闻 -->
+    <div class="modal fade" id="perviewModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="perviewModalTitle">文章标题</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="perviewModalContent">
+            文章内容
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./index.js" type="module"></script>
 </body>
 
