--- a/admin/views/news-manage/editNews/index.html
+++ b/admin/views/news-manage/editNews/index.html
@@ -75,7 +75,7 @@
                   <label for="coverFile" class="form-label">封面图片</label>
                   <input type="file" class="form-control" id="coverFile">
                 </div>
-                <button type="submit" class="btn btn-primary">创建新闻</button>
+                <button type="submit" class="btn btn-primary">更新新闻</button>
               </form>
             </div>
           </div>
