--- a/admin/views/news-manage/newsList/index.html
+++ b/admin/views/news-manage/newsList/index.html
@@ -67,6 +67,25 @@
       </div>
     </div>
 
+    <!-- Modal - 删除新闻 -->
+    <div class="modal fade" id="delModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">删除新闻</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            确定删除这篇文章吗？
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary" id="delConfirm">确定</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./index.js" type="module"></script>
 </body>
 
