--- a/admin/views/home/index.html
+++ b/admin/views/home/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="/admin//lib//css/bootstrap.css">
   <script src="/admin//lib/js/bootstrap.js"></script>
   <link rel="stylesheet" href="./index.css">
+  <!-- 引入echarts -->
+  <script src="/admin/lib/echarts.js"></script>
 </head>
 
 <body>
@@ -33,6 +35,9 @@
               <!-- 个人信息 -->
               <div class="userprofile">
               </div>
+              <!-- 可视化图表 -->
+              <!-- 为 ECharts 准备一个定义了宽高的 DOM -->
+              <div id="main" style="width: 100%;height:400px;margin-top:30px"></div>
             </div>
           </div>
         </div>
