--- a/admin/views/home/index.html
+++ b/admin/views/home/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="./index.css">
   <!-- 引入echarts -->
   <script src="/admin/lib/echarts.js"></script>
+  <!-- 引入lodash -->
+  <script src="/admin/lib/lodash.js"></script>
 </head>
 
 <body>
