前台-导航栏

--- a/admin/views/home/index.html
+++ b/admin/views/home/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/admin//lib//css/bootstrap.css">
-  <script src="/admin//lib/js/bootstrap.js"></script>
+  <link rel="stylesheet" href="/admin/lib/css/bootstrap.css">
+  <script src="/admin/lib/js/bootstrap.js"></script>
   <link rel="stylesheet" href="./index.css">
   <!-- 引入echarts -->
   <script src="/admin/lib/echarts.js"></script>
