--- a/admin/views/home/index.css
+++ b/admin/views/home/index.css
@@ -14,6 +14,7 @@ body,
   left: 0;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 .main .box {
   flex: 1;
@@ -21,6 +22,10 @@ body,
 }
 .main .box .content {
   padding: 20px;
+}
+.main .box .content .maincontent {
+  padding: 20px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .maincontent {
