--- a/web/views/products/index.html
+++ b/web/views/products/index.html
@@ -16,59 +16,13 @@
     <div class="topbar">
     </div>
     <div class="box">
-      <!-- todo 轮播图 carousel -->
+      <!-- done 轮播图 carousel -->
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-            aria-label="Slide 4"></button>
+          <!-- 动态渲染指示器 -->
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <!-- <img src="http://localhost:3000/1.jpg" class="d-block w-100" alt="..."> -->
-            <div
-              style="background-image: url(http://localhost:3000/1.jpg);width: 100%;height:calc(100vh - 50px);background-size: cover;">
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <!-- <img src="http://localhost:3000/2.jpg" class="d-block w-100" alt="..."> -->
-            <div
-              style="background-image: url(http://localhost:3000/2.jpg);width: 100%;height:calc(100vh - 50px);background-size: cover;">
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <!-- <img src="http://localhost:3000/3.jpg" class="d-block w-100" alt="..."> -->
-            <div
-              style="background-image: url(http://localhost:3000/3.jpg);width: 100%;height:calc(100vh - 50px);background-size: cover;">
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <!-- <img src="http://localhost:3000/4.jpg" class="d-block w-100" alt="..."> -->
-            <div
-              style="background-image: url(http://localhost:3000/4.jpg);width: 100%;height:calc(100vh - 50px);background-size: cover;">
-            </div>
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
+          <!-- 动态渲染内容 -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev">
