--- a/web/views/news/index.css
+++ b/web/views/news/index.css
@@ -8,7 +8,36 @@ body,
   display: flex;
   flex-direction: column;
 }
+.main .topbar {
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+}
 .main .box {
   flex: 1;
   padding-top: 50px;
+}
+
+.newsbg {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: url("http://localhost:3000/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.newsbg .search-container {
+  position: absolute;
+  width: 75%;
+  bottom: 50px;
+  left: 50%;
+  transform: translate(-50%);
+}
+.newsbg .search-container .list-group {
+  position: absolute;
+  width: 100%;
+  opacity: 80%;
 }
