--- a/web/views/news/index.html
+++ b/web/views/news/index.html
@@ -16,7 +16,17 @@
     <div class="topbar">
     </div>
     <div class="box">
-
+      <div class="newsbg">
+        <!-- 搜索输入框和下拉菜单的容器 -->
+        <div class="form-floating search-container">
+          <!-- 搜索框 -->
+          <input type="text" class="form-control" id="search" placeholder="newstitle">
+          <label for="floatingInput">搜索关键字</label>
+          <!-- 下拉菜单 -->
+          <ul class="list-group">
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
   <script src="./index.js" type="module"></script>
