--- a/web/views/news/index.scss
+++ b/web/views/news/index.scss
@@ -1,2 +1,22 @@
 @import '../../style.scss';
 
+.newsbg{
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: url('http://localhost:3000/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  .search-container{
+      position: absolute;
+      width: 75%;
+      bottom: 50px;
+      left: 50%;
+      transform: translate(-50%);
+      .list-group{
+        position: absolute;
+        width: 100%;
+        opacity: 80%;
+      }
+  }
+}
