前台-新闻列表

--- a/web/views/news/index.html
+++ b/web/views/news/index.html
@@ -27,6 +27,9 @@
           </ul>
         </div>
       </div>
+      <!-- 新闻列表 -->
+      <div class="cardContainer">
+      </div>
     </div>
   </div>
   <script src="./index.js" type="module"></script>
