--- a/web/views/news/index.css
+++ b/web/views/news/index.css
@@ -28,6 +28,7 @@ body,
   background-image: url("http://localhost:3000/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  z-index: 100;
 }
 .newsbg .search-container {
   position: absolute;
@@ -40,4 +41,22 @@ body,
   position: absolute;
   width: 100%;
   opacity: 80%;
+}
+
+.cardContainer {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+.cardContainer .card {
+  width: calc(25vw - 20px);
+}
+.cardContainer .card .card-img-top {
+  width: 100%;
+  height: 150px;
+  background-size: cover;
+  background-position: center;
+}
+.cardContainer .card:hover {
+  box-shadow: 0 0 5px black;
 }
