--- a/web/views/news/index.css
+++ b/web/views/news/index.css
@@ -60,3 +60,18 @@ body,
 .cardContainer .card:hover {
   box-shadow: 0 0 5px black;
 }
+
+.newsTabs {
+  padding: 30px;
+}
+.newsTabs .listItem {
+  padding: 10px;
+  height: 100px;
+  border: 1px solid gray;
+  overflow: hidden;
+}
+.newsTabs .listItem img {
+  float: left;
+  width: 120px;
+  height: 100%;
+}
