--- a/web/views/news/index.html
+++ b/web/views/news/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/admin/lib/css/bootstrap.css">
   <script src="/admin/lib/js/bootstrap.js"></script>
   <link rel="stylesheet" href="./index.css">
+  <script src="/admin/lib/lodash.js"></script>
 </head>
 
 <body>
@@ -29,6 +30,29 @@
       </div>
       <!-- 新闻列表 -->
       <div class="cardContainer">
+      </div>
+      <!-- 新闻分类 -->
+      <hr>
+      <div class="newsTabs">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#tab0" type="button"
+              role="tab" aria-selected="true">最新动态</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button"
+              role="tab" aria-selected="false">典型案例</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button"
+              role="tab" aria-selected="false">通知公告</button>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="tab0" role="tabpanel" aria-labelledby="tab0-tab">...</div>
+          <div class="tab-pane fade" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">...</div>
+          <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">...</div>
+        </div>
       </div>
     </div>
   </div>
