--- a/web/views/news/index.scss
+++ b/web/views/news/index.scss
@@ -39,3 +39,18 @@
     }
   }
 }
+
+.newsTabs{
+  padding: 30px;
+  .listItem{
+    padding: 10px;
+    height: 100px;
+    border: 1px solid gray;
+    overflow: hidden;
+    img{
+      float: left;
+      width: 120px;
+      height: 100%;
+    }
+  }
+}
