前台-新闻详情

--- a/web/components/topbar/index.html
+++ b/web/components/topbar/index.html
@@ -9,8 +9,7 @@
       <ul class="navbar-nav">
         <!-- 跳转到产品页面 -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/web/views/products/index.html"
-            id="topbar-products">产品与服务</a>
+          <a class="nav-link" aria-current="page" href="/web/views/products/index.html" id="topbar-products">产品与服务</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/web/views/news/index.html" id="topbar-news">新闻中心</a>
